static/style.css
/*!
 * Start Bootstrap - Freelancer v5.0.4 (https://startbootstrap.com/template-overviews/freelancer)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-freelancer/blob/master/LICENSE)
 */

body {
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 700;
}

hr.star-light,
hr.star-dark {
    max-width: 15rem;
    padding: 0;
    text-align: center;
    border: none;
    border-top: solid 0.25rem;
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
    margin-left: auto;
    margin-right: auto;
}

hr.star-light:after,
hr.star-dark:after {
    position: relative;
    top: -.8em;
    display: inline-block;
    padding: 0 0.25em;
    content: '\f005';
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 2em;
}

hr.star-light {
    border-color: #fff;
}

hr.star-light:after {
    color: #fff;
    background-color: #18BC9C;
}

hr.star-dark {
    border-color: #2C3E50;
}

hr.star-dark:after {
    color: #2C3E50;
    background-color: white;
}

section {
    padding: 6rem 0;
}

section h2 {
    font-size: 2.25rem;
    line-height: 2rem;
}

@media (min-width: 992px) {
    section h2 {
        font-size: 3rem;
        line-height: 2.5rem;
    }
}

.btn-xl {
    padding: 1rem 1.75rem;
    font-size: 1.25rem;
}

.btn-social {
    width: 3.25rem;
    height: 3.25rem;
    font-size: 1.25rem;
    line-height: 2rem;
}

.scroll-to-top {
    z-index: 1042;
    right: 1rem;
    bottom: 1rem;
    display: none;
}

.scroll-to-top a {
    width: 3.5rem;
    height: 3.5rem;
    background-color: rgba(33, 37, 41, 0.5);
    line-height: 3.1rem;
}

#mainNav {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

#mainNav .navbar-brand {
    color: #fff;
}

#mainNav .navbar-nav {
    margin-top: 1rem;
    letter-spacing: 0.0625rem;
}

#mainNav .navbar-nav li.nav-item a.nav-link {
    color: #fff;
}

#mainNav .navbar-nav li.nav-item a.nav-link:hover {
    color: #18BC9C;
}

#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
    color: #fff;
}

#mainNav .navbar-nav li.nav-item a.nav-link.active {
    color: #18BC9C;
}

#mainNav .navbar-toggler {
    font-size: 80%;
    padding: 0.8rem;
}

header.masthead {
    padding-top: calc(6rem + 72px);
    padding-bottom: 6rem;
}

header.masthead h1 {
    font-size: 3rem;
    line-height: 3rem;
}

header.masthead h2 {
    font-size: 1.3rem;
    font-family: 'Lato';
}

@media (min-width: 992px) {
    header.masthead {
        padding-top: calc(6rem + 106px);
        padding-bottom: 6rem;
    }

    header.masthead h1 {
        font-size: 4.75em;
        line-height: 4rem;
    }

    header.masthead h2 {
        font-size: 1.75em;
    }
}

.portfolio {
    margin-bottom: -15px;
}

.portfolio .portfolio-item {
    position: relative;
    display: block;
    max-width: 25rem;
    margin-bottom: 15px;
}

.portfolio .portfolio-item .portfolio-item-caption {
    -webkit-transition: all ease 0.5s;
    transition: all ease 0.5s;
    opacity: 0;
    background-color: rgba(24, 188, 156, 0.9);
}

.portfolio .portfolio-item .portfolio-item-caption:hover {
    opacity: 1;
}

.portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
    font-size: 1.5rem;
}

.footer {
    padding-top: 5rem;
    padding-bottom: 5rem;
    background-color: #2C3E50;
    color: #fff;
}

.copyright {
    background-color: #1a252f;
}

a {
    color: #18BC9C;
}

a:focus, a:hover, a:active {
    color: #128f76;
}

.btn {
    border-width: 2px;
}

.bg-primary {
    background-color: #18BC9C !important;
}

.bg-secondary {
    background-color: #2C3E50 !important;
}

.text-primary {
    color: #18BC9C !important;
}

.text-secondary {
    color: #2C3E50 !important;
}

.btn-primary {
    background-color: #18BC9C;
    border-color: #18BC9C;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
    background-color: #128f76;
    border-color: #128f76;
}

.btn-secondary {
    background-color: #2C3E50;
    border-color: #2C3E50;
}

.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
    background-color: #1a252f;
    border-color: #1a252f;
}

div.horizontalScroll {
    overflow: auto;
    white-space: nowrap;
}

div.horizontalScroll div.board {
    width: 300px;
    height: 800px;
    border: solid 1px #000;
    display: inline-block;
}

div.board div.board-header {
    width: 100%;
    height: 5%;
    border-bottom: solid 1px;
}


div.board-body {
    width: 100%;
    height: 95%;
}


div.new-board div.board-header {
    width: 100%;
    height: 15%;
}


div.new-board div.board-body {
    width: 100%;
    height: 85%;
}

.new-board {
    width: 100%;
    height: 200px;
    border: solid 1px #000;
}

.new {
    background-color: rgb(240, 173, 78);
    width: 150px;
    min-height: 60px;
    padding: 5px;
    display: inline-block;
}

.board-panel .container{
    max-width: 98%;
    padding-left: 8px;
    margin-left: 10px;
    margin-right: 10px;
    padding-right: 8px;
}

